PasswordSafe will open the default "My Safes" directory as it did prior to this change.
[] Databases are now always validated when opened. The Manage->Validate
menu item has therefore been removed.
[] The default backup policy has been changed to save the last three
versions of the database, instead of one. 

Bugs fixed in 3.28pre
=====================
[3468853] The number of saved passwords can be changed and after the user presses Apply
they will no longer be warned that the entry has been changed when pressing Cancel.
[3462520] A password entry's expiry time in days now correctly
reflects the expiration date for non-recurring expiration.
[3440318] Filters can now be cleared by double-clicking on the filter indicator in
the status bar. Also, Filter Menu correctly changed when a filter is active.
[3435869] '-g config_file' option now accepts a non-existing file,
creating it after notfying the user.
[3430196] Buttons in the Options property pages now retain the user's Windows theme.
[] Fix inability to copy entries to the original database in the Compare database results
dialog.
[] Thanks to Jon F. for proofreading the online help.

New Features for 3.27
=====================
[3367590] User can now add a database name and description via the Properties
diaolg.
[3349458] Allow filters to match on rules based on the password's length.
[3316779] Shift + "left mouse button 'Double-Click'" now configurable for user.
Default is copy the username to the clipboard.
[] Preferences stored in the database are shown in blue in the Options dialogs.

Changes to Existing Features in 3.27
====================================
[3406549] Tooltip for System tray (displaying database file path) is
now limited to 40 characters (replacing text in the middle with '...'
if needed).
[3348954] The passphrase is now required to change from read-only to
read/write.

Bugs fixed in 3.27
==================
[3411210] No longer crashes when unlocking with Subset Password dialog
box opened.