@@ -135,6 +135,14 @@ instead of one.</td>
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3486960);return false;">3486960</a></td>
+<td>Rename of a group now complete even if a filter is active.</td>
+</tr>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3486959);return false;">3486959</a></td>
+<td>PasswordSafe no longer crashes when returning to edit after lock.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3468853);return false;">3468853</a></td>
 <td>The number of saved passwords can be changed and after the user presses Apply
 they will no longer be warned that the entry has been changed when pressing Cancel.</td>
