@@ -488,6 +488,9 @@ private:
                                       SavePWHistoryMap &mapSavedHistory);
   virtual void UndoUpdatePasswordHistory(SavePWHistoryMap &mapSavedHistory);
 
+  virtual int DoRenameGroup(StringX sxOldPath, StringX sxNewPath);
+  virtual void UndoRenameGroup(StringX sxOldPath, StringX sxNewPath);
+
   // End of Command Interface implementations
   void ResetAllAliasPasswords(const pws_os::CUUID &base_uuid);
   
